# Satellite-Architecture-Design-Suite-SADS-

./: .gitattributes  .gitignore  AUTHORS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ExecutiveSummary.md  GOVERNANCE.md  Makefile  NOTICE  README.md  ROADMAP.md  SECURITY.md  TestSuites.md  docker-compose.yml  package.json  pnpm-workspace.yaml  pyproject.toml  turbo.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  simulation_issue.md  subsystem_issue.md
.github/workflows/: build.yml  documentation.yml  release.yml  security.yml  simulation.yml  test.yml  (+2 more)
ai/: AerospaceRAG.py  ArchitectureAdvisor.py  CopilotAPI.py  DesignReviewer.py  KnowledgeBase.py  MissionAdvisor.py  OptimizationAgent.py  RiskAnalyzer.py
api/: main.py
data/: component_library.json  structures_subsystem.json
digital_twin/: FailurePrediction.py  MissionReplay.py  StateSynchronizer.py  TelemetryIngestion.py  TwinAPI.py  TwinAnalytics.py  TwinCore.py
engines/: README.md  adcs_engine.py  comm_engine.py  orbit_engine.py  payload_engine.py  power_engine.py  propulsion_engine.py  structures_engine.py  thermal_engine.py
mbse/: CoSimulation.py  ComplianceEngine.py  InterfaceDefinitions.py  RequirementsManager.py  SysMLParser.py  TraceabilityEngine.py  VerificationMatrix.py
services/: simulation_service.py
simulation/: EventScheduler.py  MissionReport.py  MissionSimulator.py  MissionState.py  MissionTimeline.py  MissionValidator.py  ScenarioRunner.py
tests/: conftest.py  test_engines.py  test_modular_engines.py
(+309 files in other folders)
